Fix dark mode

--- a/magi-knights-awakening/src/assets/main.css
+++ b/magi-knights-awakening/src/assets/main.css
@@ -42,6 +42,8 @@ label:has(button,a){
 }
 select{
   border: 0;
+  background-color: var(--masterBack);
+  color: var(--color);
 }
 input::-webkit-inner-spin-button,
 input::-webkit-outer-spin-button{
@@ -75,6 +77,7 @@ h3,h4,h5{
 }
 .underline{
   border-bottom: 1px solid var(--borderColor);
+  color: var(--color);
 }
 .grid{
   display: grid;
