--- a/magi-knights-awakening/src/assets/variables.css
+++ b/magi-knights-awakening/src/assets/variables.css
@@ -16,7 +16,7 @@ html{
   --borderColor: var(--lm-borderColor);
 
   --lm-header-blue: #153859;
-  --dm-header-blue: #3337f3;
+  --dm-header-blue: #cfcffc;
   --header-blue: var(--lm-header-blue);
 
   --error-red: #dc0508;
@@ -27,6 +27,11 @@ html{
   --big-gap: calc(var(--gap) * 2);
 
   /* images */
+  --header-image-lm: url('./magiKnight-header.png');
+  --header-image-dm: url('./magiKnight-header-dm.png');
+
+  --header-image: var(--header-image-lm);
+
   --swordImage: url('./sword.png');
   --abilityImage: url('./ability-circle.png');
   --diamondImage: url('./diamond.png');
@@ -69,4 +74,6 @@ html.dark{
   --color: var(--dm-color);
   --borderColor: var(--dm-borderColor);
   --header-blue: var(--dm-header-blue);
+
+  --header-image: var(--header-image-dm);
 }
